[project]
name = "aioredlock"
version = "0.7.4"
description = "Asyncio implementation of Redis distributed locks"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "aiodocker>=0.23.0",
    "attrs>=25.3.0",
    "codecov>=2.1.13",
    "flake8>=5.0.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "redis>=6.1.1",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]
